--- a/002.Data_Collection_Violations.ipynb
+++ b/002.Data_Collection_Violations.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "import time\n",
     "\n",
-    "for link in links[54:]:\n",
+    "for link in links:\n",
     "    # open url\n",
     "    resp = urlopen(link)\n",
     "    # read zipfile\n",
@@ -102,13 +102,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_list_df = pd.DataFrame(text_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_list_df.to_csv('text_list.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "with open(\"test.txt\", \"wb\") as filepath:\n",
-    "    pickle.dump(text_list, filepath)"
+    "# or as teext file (takes longer)\n",
+    "#import pickle\n",
+    "#with open(\"test.txt\", \"wb\") as filepath:\n",
+    "#    pickle.dump(text_list, filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading\n",
+    "#with open ('test.txt', 'rb') as filepath:\n",
+    "#    text_list = pickle.load(filepath)"
    ]
   },
   {
