keeping only txt export

--- a/002.Data_Collection_Violations.ipynb
+++ b/002.Data_Collection_Violations.ipynb
@@ -102,32 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_list_df = pd.DataFrame(text_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_list_df.to_csv('text_list.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or as teext file (takes longer)\n",
-    "#import pickle\n",
-    "#with open(\"test.txt\", \"wb\") as filepath:\n",
-    "#    pickle.dump(text_list, filepath)"
+    "import pickle\n",
+    "with open(\"DATA/text.txt\", \"wb\") as filepath:\n",
+    "    pickle.dump(text_list, filepath)"
    ]
   },
   {
@@ -137,7 +118,7 @@
    "outputs": [],
    "source": [
     "# loading\n",
-    "#with open ('test.txt', 'rb') as filepath:\n",
+    "#with open ('DATA/text.txt', 'rb') as filepath:\n",
     "#    text_list = pickle.load(filepath)"
    ]
   },
@@ -166,6 +147,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
