--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -43,21 +43,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open ('test.txt', 'rb') as filepath:\n",
+    "with open ('DATA/text.txt', 'rb') as filepath:\n",
     "    text_list = pickle.load(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75996170, 1)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It's a huge dataset, we should be careful dealing with them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(text_list, columns=['violations'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
     "## Text Preprocessing\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -68,8 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "pattern = \"([a-zA-Z0-9]+[\\&[a-zA-Z]+]?)\"\n",
@@ -78,22 +122,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "txt_tok = [p.findall(str(x).upper()) for x in text_list]"
+    "df['violations'] = df.violations.map(lambda x: ' '.join(p.findall(str(x).upper())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# check for duplicates\n",
+    "df.drop_duplicates(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(451562, 1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "That's substantially less, so that's great! Let's save them out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"DATA/text_clean.txt\", \"wb\") as filepath:\n",
+    "    pickle.dump(df.violations.values, filepath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clustering\n",
+    "First, I'll loop through all unique words and try to converge some of the similar ones. That will correct some typos.\n",
+    "Then I can look at clustering in two different ways\n",
+    "1. see individual word clustering\n",
+    "2. see the average coordinate clustering (average point of all words in each observation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the preprocessed text\n",
-    "with open(\"preprocessed_text.txt\", \"wb\") as filepath:\n",
-    "    pickle.dump(txt_tok, filepath)"
+    "import spacy"
    ]
   },
   {
@@ -121,6 +231,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
