--- a/030.Violation_Text_Clustering.ipynb
+++ b/030.Violation_Text_Clustering.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -39,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -57,16 +48,16 @@
     {
      "data": {
       "text/plain": [
-       "(75996170, 1)"
+       "75996170"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.shape"
+    "len(text_list)"
    ]
   },
   {
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,19 +78,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Text Preprocessing\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -110,22 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pattern = \"([a-zA-Z0-9]+[\\&[a-zA-Z]+]?)\"\n",
+    "pattern = \"([a-zA-Z]+[\\&[a-zA-Z]+]?)\"\n",
     "p = re.compile(pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df['violations'] = df.violations.map(lambda x: ' '.join(p.findall(str(x).upper())))"
@@ -133,10 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# check for duplicates\n",
@@ -145,18 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(451562, 1)"
+       "(439438, 1)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,19 +146,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "That's substantially less, so that's great! Let's save them out."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"DATA/text_clean.txt\", \"wb\") as filepath:\n",
@@ -187,10 +162,166 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy\n",
+    "import en_core_web_lg\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = [x.lower() for x in list(df.violations)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = en_core_web_lg.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def consolidate_words(textlist, n = 1, thresh = .8, nlp = None, replace = False, manual_spellcheck = False):\n",
+    "    '''\n",
+    "    Takes a list of texts to run iteration\n",
+    "    Change word that occurs only once to similar word in the text\n",
+    "    Return consolidated list \n",
+    "    '''\n",
+    "    if nlp == None:\n",
+    "        nlp = en_core_web_lg.load()\n",
+    "    \n",
+    "    list_of_text = textlist.copy()\n",
+    "    \n",
+    "    wordcounts = Counter(' '.join(list_of_text).split())    \n",
+    "    words_once = [k for k, v in wordcounts.items() if v == n]\n",
+    "    other_words = [k for k, v in wordcounts.items() if v > n]\n",
+    "    \n",
+    "    tokens = nlp(' '.join(other_words))\n",
+    "    replacement_dict = {}\n",
+    "    \n",
+    "    for word in words_once:\n",
+    "\n",
+    "        word_token = nlp(word)\n",
+    "        max_similarity = thresh\n",
+    "\n",
+    "        for tk in tokens:\n",
+    "            # find the maximum similarity above threshold\n",
+    "            sim_score = word_token.text, tk.text, word_token.similarity(tk)\n",
+    "            if 1 > sim_score[2] > max_similarity:\n",
+    "                replacement_dict[word] = sim_score[1]\n",
+    "                max_similarity = sim_score[2]\n",
+    "        try:\n",
+    "            print(word, 'to', replacement_dict[word])\n",
+    "        except KeyError:\n",
+    "            if manual_spellcheck:\n",
+    "                ans = input(f'{word} does not have a replacement. If you have a suggesion, type the word, otherwise press spacebar')\n",
+    "                if ans == ' ':\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    replacement_dict[word] = ans\n",
+    "            else:\n",
+    "                continue\n",
+    "    \n",
+    "    if replace:\n",
+    "        for i, text in enumerate(list_of_text):\n",
+    "\n",
+    "            text = text.split()\n",
+    "            for j, te in enumerate(text):\n",
+    "                if te in replacement_dict: \n",
+    "                    text[j] = replacement_dict[te]\n",
+    "            list_of_text[i] = ' '.join(text)\n",
+    "\n",
+    "        return list_of_text\n",
+    "    \n",
+    "    else:\n",
+    "        return replacement_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "new_tmp = consolidate_words(tmp, nlp = nlp, replace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# running one more\n",
+    "new_tmp2 = consolidate_words(new_tmp, n = 2, thresh = .85, nlp = nlp, replace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['violations'] = new_tmp2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering\n",
+    "### Lemmatization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lemmatization\n",
+    "wnl = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['violations'] = df.violations.apply(lambda x: [wnl.lemmatize(word) for word in x.split()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning\n",
     "First, I'll loop through all unique words and try to converge some of the similar ones. That will correct some typos.\n",
     "Then I can look at clustering in two different ways\n",
     "1. see individual word clustering\n",
@@ -198,13 +329,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get Word Embeddings\n",
+    "Now I'll get the word embeddings for each words."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import spacy"
+    "unique = set()\n",
+    "\n",
+    "for text in df.violations:\n",
+    "    unique = unique | set(text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'set' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-75-280ece7be9aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'set' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
